static/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --background: #1e1e2e;
  --surface: #181825;
  --text: #cdd6f4;
  --accent: #fab387;
  --onaccent: var(--background);
  --radius: 1rem;
  --imgfilter: invert(1);
}

.simple {
  --background: #ecf0f5;
  --surface: #fff;
  --text: #333;
  --accent: #175ddc;
  --onaccent: var(--background);
  --radius: 0.2rem;
  --imgfilter: none;
}

.everforest {
  --background: #232a2e;
  --surface: #3d484d;
  --text: #d3c6aa;
  --accent: #dbbc7f;
  --onaccent: var(--surface);
  --radius: 0.8rem;
  --imgfilter: invert(0.7);
}

html {
  background: var(--background);
  color: var(--text);
  accent-color: var(--accent);
}

main {
  padding: 0 1rem;
  min-width: 50%;
}

a {
  text-decoration: none;
  color: var(--accent);
}

a:hover {
  box-shadow: 0 2px 0 0 var(--accent);
}

button,
input[type="file"]::file-selector-button,
.button {
  background: var(--accent);
  color: var(--onaccent);
  border: none;
  border-radius: var(--radius);
  padding: 0.5rem 5rem;
  cursor: pointer;
}

input[type="file"]::file-selector-button {
  margin-right: 1rem;
}

input[type="text"],
input[type="password"],
select,
textarea {
  width: 100%;
  padding: 0.9rem 1.3rem;
  display: inline-block;
  border: 2px solid var(--text);
  border-radius: var(--radius);
  background: var(--background);
  color: var(--text);
  outline: none;
}

input[type="text"]:focus,
input[type="password"]:focus,
select:focus,
textarea:focus {
  border: 2px solid var(--accent);
}

.button:hover {
  box-shadow: none;
}

button[type="submit"] {
  margin-top: 0.5rem;
  float: right;
}

.form-buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: end;
  gap: 0.8rem;
}

body {
  width: 100%;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

section {
  background: var(--surface);
  padding: 1rem 2rem;
  border-radius: calc(var(--radius) * 2);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  align-items: center;
}

h2 {
  margin-bottom: 0.8rem;
}

hr {
  width: 70%;
  margin: 1rem 0;
  opacity: 0.5;
}

.text-body {
  padding: 0.5rem 0.8rem;
  white-space: break-spaces;
  overflow-wrap: break-word;
  max-width: 100%;
}

.btn-container {
  margin: 1rem 0;
}

form {
  display: flex;
  flex-direction: column;
  width: max(30rem, 50vw);
  max-width: 90vw;
  gap: 0.5rem;
}

.delete-item {
  min-width: 0;
}

.wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(min(30rem, 100%), 1fr));
  gap: 1rem;
  margin-bottom: 1rem;
}

.wrapper a:hover {
  box-shadow: none;
}

#navlinks {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin: 3rem 0;
  gap: 2rem;
}

#navlinks a {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#navlinks img {
  width: 5rem;
  height: 5rem;
  margin-bottom: 0.5rem;
  filter: var(--imgfilter);
}

#options {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: min-content;
  gap: 3rem;
  margin-bottom: 1rem;
}

#options form,
#delete {
  min-width: 0;
}

#account-actions {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 0.8rem;
}

#newpaste textarea {
  min-height: 30vh;
}

table {
  width: 100%;
  border-collapse: collapse;
}

td,
th {
  text-align: left;
  padding: 8px;
}

tr:nth-child(even) {
  background-color: var(--surface);
}

#upload-dl {
  margin-top: 3rem;
}

#gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  margin-top: 1rem;
}

#gallery img {
  height: 15rem;
  max-width: 100%;
  border-radius: var(--radius);
}

.delete-container {
  display: flex;
  position: relative;
}

.delete-container h3 {
  margin-top: 1rem;
  max-width: calc(100% - 6rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.delete-form {
  padding: 0;
  position: absolute;
  top: 5px;
  right: 5px;
  width: auto;
}

.delete-form button {
  padding: 0.5rem;
  margin: 0.5rem;
}

.delete-form button > img {
  height: 1.8rem !important;
}

#slider-wrapper {
  position: relative;
  max-width: 80vw;
  margin: 0 auto;
}

#slider {
  display: flex;
  aspect-ratio: 16 / 9;
  overflow-x: auto;
  -ms-overflow-style: none;
  scrollbar-width: none;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  border-radius: var(--radius);
}

#slider::-webkit-scrollbar {
  display: none;
}

#slider img {
  flex: 1 0 100%;
  scroll-snap-align: start;
  object-fit: cover;
}

#slider-nav {
  display: flex;
  column-gap: 1rem;
  position: absolute;
  bottom: 1.25rem;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;
}

#slider-nav a {
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 50%;
  background-color: #fff;
  opacity: 0.5;
  transition: opacity ease 250ms;
}

#slider-nav a:hover {
  opacity: 1;
}

#totp-container {
  display: flex;
}

#qr-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 1rem;
  width: min-content;
  gap: 1rem;
}

.space-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.space-between > * {
  margin: 0;
}

